docs(22.5 truth-refresh iter-1): absorb Codex thread 019e738c REVISE
Codex review of the initial truth-refresh PR returned REVISE with 3
must_fix + 5 should_consider. This commit absorbs all three must_fix
+ 4 should_consider items in one batch.

## must_fix

1. AG-026B/C/D live chain missing PR #29 splat fix `97edf17`
   - current-state.md "Operator enrollment-friction" table: add PR #29
     row "install.ps1 -Force splat array→hashtable live fix"
   - plan doc AG-026C row: append PR #29 reference + commit
   - plan doc §0.1bis Operator enrollment friction row: add PR #29

2. BE-022Q stale cluster digest sha256:c895cfd60d64... was superseded
   2026-05-29 by sha-e3a0369 / sha256:76bacc004f... after backend #326
   BE-023 Dockerfile --add-opens revert + gitops #1130 digest bump.
   Verified live: kubectl --context k3d-test -n platform-test
   get deploy endpoint-admin-service → image sha256:76bacc004f...
   - current-state.md BE-022Q ImageID row: mark sha-4ff2ceb as
     superseded, point at sha-e3a0369 + chain provenance
   - plan doc §0.1bis hardware ingest+query row: same superseded note
   - plan doc §3 BE-022Q row: current digest sha-e3a0369; note
     backend #326 lower(bytea) SQL grammar issue for deep payload-hash
     equality query path (partial bug tracked separately)

3. plan doc §9 "İlk Source PR Sırası" future-work list still ordered
   merged items as upcoming → marked entire §9 as historical/superseded,
   moved active sequence to new §9.bis with P0/P1/P2/Deferred buckets
   reflecting 2026-05-29 reality

## should_consider absorbed

- AG-025H commit ref f3b5c68 (PR #21 merge) instead of incorrect
  4f3ce19 (which doesn't exist in platform-agent history)
- WEB-014D/WEB-012 wording drift resolved: state says install dispatch
  UI foundation merged, dedicated pilot dispatch button + audit/result
  render on per-device drawer still pending; plan doc §3 row mirrors
- Web row PR/commit refs added: WEB-011=#674 `70a038ac`,
  WEB-014A=#675 `0c4f33a8`, WEB-0